--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://masimevanistelrooy:lZWdVCgFGjZLrGrR@cluster0.3tgl1i4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-JWT_SECRET=supersecret key
+JWT_SECRET=supersecretjwtkey12345
